--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1>Sarthak's Portfolio</h1>
     <h2>I am a web developer</h2>
     <hr/>
-    <h3><a href="./public/birthday-invite.html">Movie Ranking Project</a></h3>
+    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
     <img src="./assets/images/movie-ranking.png" alt="Movie ranking project preview" height="200">
     <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/birthday-invite.png" alt="Movie ranking project preview" height="300" >
+    <img src="./assets/images/birthday-invite.png" alt="Birthday invite project preview" height="300" >
     <hr/>
     <a href="./public/contact.html">Contact me</a>
     <a href="./public/about.html">About me</a>
